Flukes Release Notes:
---------------------

03/31/14:
- Added NCSU2 net

03/05/14:
- Added WVN, NCSU, NCSU2 racks

02/26/14:
- Updated to support fixes to CH API

02/19/14:
- Added support for Federation Slice authority and GENI Portal (see Help)

02/13/14:
- Updated path search algorithm

1/28/14:
- Enabled support for color extension

11/15/13:
- Renamed SL to starlight to support SL site

11/15/13:
- Modified to support broadcast connections with common links

10/17/13:
- Added new racks (UFL, SL, OSF, UCD)

10/10/13:
- Added explicit 'No dependencies' option to node dependencies field

08/30/13:
- Added support for multicast domains

07/30/13:
- Added storage parameterization
- Added sudo option on second account

07/16/13:
- Added support for storage request and manifests

06/24/13:
- Added direct support for .pem/.crt/.key credentials without intervening .jks 

06/16/13:
- Added user cert validity check

06/03/13:
- Updated the list of known sites

05/28/13:
- Added support for additional SSH public keys

05/23/13:
- Added mac addresses to displayed properties

05/21/13:
- Added support for image registry

05/01/13:
- Added support for stitch port manifest 

04/30/13:
- Added support for stitching port requests

04/02/13:
- Added experimental support for automatic IP address assignment

03/18/13:
- Shortened names of links in inter-domain cases

03/13/13:
- Added NCSU site

03/07/13:
- Added ability to extend slice lifetime
- Improved readability of names in manifests
- Added ability to save manifest into iRods

02/15/13:
- Added FIU

01/28/13:
- New base image with non-blocking NEuca tools upgrade

01/04/13:
- Updated for New/Save bug

12/21/12:
- 'End-of-the-world' release, last in 0.3 series.

12/17/12:
- Added checks for image when saving and loading requests

11/30/12:
- Updated standard Debian image

11/20/12:
- Added new standard Debian image

11/11/12:
- Renamed modify buttons to make purpose clearer

11/7/12: